2014-01-24  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php
	godmode/alerts/alert_view.php
	include/styles/pandora.css
	include/functions_alerts.php: Fix some bugs when 
	doesnt exist an action with min-infinite situation.
	Some visual fixes

2014-01-23  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_view.php
	include/styles/pandora.css
	include/functions_alerts.php: Fix escalation errors, added action
	threshold information, encapsulate code to avoid future headaches.

2014-01-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php,
	include/styles/pandora.css: fixed the font sizes for the visualmaps
	embedmed into a dash
	
	Incident: #537 from local tacker.

2014-01-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: fixed the links of icons in
	the visualconsole.

2014-01-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/visual_console/render_view.php: re-added the countdown
	widget for visualmaps in fullscreen.
	
	Incident: #539 from local tacker.

2014-01-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/map_builder.php,
	godmode/reporting/visual_console_builder.data.php: fixed the access
	to user with operator read or and operator write in all group into
	the visualmaps.
	
	Incident: #538 from local tracker

2014-01-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.js,
	include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: fixes the bug for
	the simple values positions and the enable links in the static
	graph.
	
	Incidents: #536 and #535 from local tracker
2014-01-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php,
	include/styles/pandora.css: fixed the font sizes for the visualmaps
	embedmed into a dashboard.

2014-01-22  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_view.php: Add exception